Added callback for getting all data, chenged dataHandler, deleted time formating after server responding

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,4 @@
 browser=Chromium.INTEGRATED
+file.reference.RGraph-config=/home/amatveev/Projects/DataCacher-on-WebSockets/config
+file.reference.RGraph-public_html=/home/amatveev/Projects/DataCacher-on-WebSockets/public_html
+file.reference.RGraph-test=/home/amatveev/Projects/DataCacher-on-WebSockets/test
